StaticPageDeployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simpleapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/static-site/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/?$ /static-site/index.html break;
spec:
  tls:
  - hosts:
    - miniostatic.192.168.64.9.nip.io
  rules:
  - host: miniostatic.192.168.64.9.nip.io
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: my-minio
          servicePort: 9000
